2014-05-09  Carlos Garcia Campos  <cgarcia@igalia.com>

        REGRESSION(CMAKE): [GTK] run-gtk-tests doesn't set the right injected bundle path
        https://bugs.webkit.org/show_bug.cgi?id=132736

        Reviewed by Philippe Normand.

        There are two problems, the path returned by common.library_build_path() is wrong when
        common.binary_build_path() has previously been called, and the test is still looking for
        the .la instead of .so

        * TestWebKitAPI/gtk/PlatformUtilitiesGtk.cpp:
        (TestWebKitAPI::Util::createInjectedBundlePath): Use .so instead
        of .la as extension of the injected bundle library.
        * gtk/common.py:
        (binary_build_path): Remove unused global variable and add a new
        one for binary_build_dir instead of sharing the same global
        variable for library_build_path and binary_build_path.

2014-05-08  Praveen R Jadhav  <praveen.j@samsung.com>

        [EFL] Enable MEDIA_STREAM for EFL port
        https://bugs.webkit.org/show_bug.cgi?id=132648

        Reviewed by Gyuyoung Kim.

        Script modified to enable MEDIA_STREAM for EFL build.

        * Scripts/webkitperl/FeatureList.pm: 

2014-05-08  David Farler  <dfarler@apple.com>

        old-run-webkit-tests: update strings for simulator devices and app name
        https://bugs.webkit.org/show_bug.cgi?id=132687

        Reviewed by Darin Adler.

        iPhone Retina (4-inch) -> iPhone 5
        iPhone Retina (4-inch 64-bit) -> iPhone 5s

        * Scripts/old-run-webkit-tests:
        (installAndLaunchDumpToolAppUsingNotification):
        (openIPhoneSimulator):
        (quitIPhoneSimulator):
        quit iOS Simulator, not iPhone Simulator.

2014-05-08  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        REGRESSION(r168471): Update the builder names on the scheduler list.
        https://bugs.webkit.org/show_bug.cgi?id=132699

        Reviewed by Martin Robinson.
